--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&family=Montserrat:wght@500&family=Rubik:wght@500&display=swap');
+*{
+  margin: 0;
+}
+.grid{
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.4fr 1fr 1.5fr 0.4fr;
+  grid-template-areas:
+    "nav"
+    "header"
+    "content1"
+    "footer";
+  text-align: center;
+  margin: 0%;
+  color: white;
+}
