--- a/style.css
+++ b/style.css
@@ -75,3 +75,17 @@ p{
   font-family:"Karla", sans-serif;
   color: lavender;
 }
+.fa {
+  padding: 20px;
+  font-size: 0px;
+  margin-left: 20px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  text-decoration: none;
+  border: 1px  solid silver;
+  border-radius: 50%;
+}
+.fa:hover{
+  opacity: 0.7;
+}
