--- a/style.css
+++ b/style.css
@@ -108,4 +108,11 @@ p{
   #navbar a{
     width: 20%;
   }
+  .fa {
+    margin-left: 20px;
+    width: 20px;
+    height: 20px;
+    font-size: 30px;
+    border-radius: 0%;
+  }
 }
